--- a/package.json
+++ b/package.json
@@ -3,5 +3,9 @@
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
     "sqlite3": "^5.1.4"
+  },
+  "main": "index.js",
+  "scripts": {
+      "start": "node index.js"
   }
 }
