--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "dependencies": {
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
-    "sqlite3": "^5.1.4"
+    "sqlite3": "^5.1.4",
+    "vercel": "^28.10.2"
   },
   "main": "index.js",
   "scripts": {
-      "start": "node index.js"
+    "start": "node index.js"
   }
 }
